Update package information for Java9.